Fix get orders handler
